Update backend URLs to Render

--- a/acheter.html
+++ b/acheter.html
@@ -429,7 +429,7 @@
 
   <script>
     // 🔧 CONFIGURATION - URL DE TON API BACKEND
-    const API_URL = 'http://localhost:5000/api/orders';
+    const API_URL = 'https://bella-exchange-backend.onrender.com/api/orders';
 
     const hamburger = document.getElementById('hamburger');
     const nav = document.getElementById('nav');
