--- a/admin/admin.html
+++ b/admin/admin.html
@@ -436,7 +436,7 @@
 
   <script>
     // 🔧 CONFIGURATION
-    const API_URL = 'http://localhost:5000/api/orders';
+    const API_URL = 'https://bella-exchange-backend.onrender.com/api/orders';
 
     let allOrders = [];
 
