Update contact.html by replacing the WhatsApp number and updating the JavaScript constant

--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <script>
+        const whatsappNumber = 242061149792;
+    </script>
 </head>
 <body>
-    <h1>Contact Information</h1>
-    <div class="contact-info">
-        <p>Phone: +242 06 114 97 92</p>
-        <p>Email: example@example.com</p>
-    </div>
-    <script>
-        const WHATSAPP_NUMBER = '242061149792';
-    </script>
+    <h1>Contact Us</h1>
+    <p>For any inquiries, please reach out to us on WhatsApp: +242 06 114 97 92</p>
 </body>
 </html>
