Update WhatsApp number in contact.html

--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <script>
-        const whatsappNumber = 242061149792;
-    </script>
+    <title>Contact Us</title>
 </head>
 <body>
     <h1>Contact Us</h1>
-    <p>For any inquiries, please reach out to us on WhatsApp: +242 06 114 97 92</p>
+    <p>If you have any questions, feel free to reach out to us via WhatsApp at <a href="https://wa.me/242061149792">+242 06 114 97 92</a>!</p>
+    <script>
+        const WHATSAPP_NUMBER = '242061149792';
+    </script>
 </body>
 </html>
